--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button class="btn btn-default"><i id="decrementBtn" class="fas fa-minus"></i></button>
+                           <input id="totalPurchaseIPhone" type="text" class="form-control text-center" value="1">
+                           <button class="btn btn-default"><i id="incrementBtn" class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$1219</h5>
+                        <h5>$<span id="iPhonePrice">1219</span> </h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -44,11 +44,11 @@
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
                            <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
+                           <input id="" type="text" class="form-control text-center" value="1">
                            <button class="btn btn-default"><i class="fas fa-plus"></i></button>
 
                         </div>
-                        <h5>$59</h5>
+                        <h5>$ <span id="iPhoneCoverPrice">59</span> </h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -77,6 +77,32 @@
          </div>
       </div>
    </section>
+   <script>
+      const iPhonePrice = parseInt(document.getElementById("iPhonePrice").innerText);
+      const iPhoneCoverPrice = parseInt(document.getElementById("iPhoneCoverPrice").innerText);
+
+      document.getElementById("incrementBtn").addEventListener('click', function () {
+         var totalPurchaseIPhone = document.getElementById("totalPurchaseIPhone").value;
+         totalPurchaseIPhone = parseInt(totalPurchaseIPhone) + 1;
+         document.getElementById("totalPurchaseIPhone").value = totalPurchaseIPhone;
+
+         totalPurchaseIPhone = totalPurchaseIPhone * iPhonePrice;
+         document.getElementById("iPhonePrice").innerText = totalPurchaseIPhone;
+      });
+
+      document.getElementById("decrementBtn").addEventListener('click', function () {
+         var totalPurchaseIPhone = parseInt(document.getElementById("totalPurchaseIPhone").value);
+         if (totalPurchaseIPhone > 1) {
+            totalPurchaseIPhone = totalPurchaseIPhone - 1;
+            document.getElementById("totalPurchaseIPhone").value = totalPurchaseIPhone;
+         } else {
+            alert('Purchase value can\'t a negative or zero number.');
+         }
+
+         totalPurchaseIPhone = totalPurchaseIPhone * iPhonePrice;
+         document.getElementById("iPhonePrice").innerText = totalPurchaseIPhone;
+      });
+   </script>
 </body>
 
 </html>
