--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
+                        <h5> <span id="subTotal$">$</span> <span id="subTotal">1,278</span> </h5>
                         <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5><span id="total$">$</span><span id="total">1,278</span></h5>
                      </div>
                   </div>
                </div>
@@ -111,7 +111,21 @@
             document.getElementById(priceSpan).innerText = price;
             alert('Purchase value can\'t a negative or zero number.');
          }
+
+         var subTotal = parseInt(document.getElementById("iPhonePrice").innerText);
+         subTotal += parseInt(document.getElementById("iPhoneCoverPrice").innerText);
+         document.getElementById("subTotal").innerText = formatter.format(subTotal);
+         document.getElementById("total").innerText = formatter.format(subTotal);
+         document.getElementById("subTotal$").style.display="none";
+         document.getElementById("total$").style.display="none";
       }
+
+      const formatter = new Intl.NumberFormat('en-US', {
+         style: 'currency',
+         currency: 'USD',
+         minimumFractionDigits: 2
+      })
+
    </script>
 </body>
 
